--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
     <!-- This is basic header of website -->
     <div class="head container">
-        <h3>Top News <span class="badge text-bg-secondary">by Hardik Desai</span></h3>
+        <h3>Top News <span class="badge text-bg-secondary">by Soumyadeep Dey</span></h3>
         <span class="line"></span>
     </div>
     <!-- This is div where all the News are Fetched from API -->
@@ -87,7 +87,7 @@
     <!-- This is Basic Dark Fotter -->
     <footer id="sticky-footer" class="flex-shrink-0 py-2 bg-dark text-white-50">
         <div class="container text-center">
-            <small>Copyright &copy;2022 &nbsp; Hardik Desai</small>
+            <small>Copyright &copy;2023 &nbsp; Soumyadeep Dey</small>
         </div>
     </footer>
 
